# rodi-example

./: CMakeLists.txt  README.md  package.xml
launch/: view_ultrasound_serial.launch  view_ultrasound_ws.launch
rviz/: view_ultrasound.rviz
