<?xml version="1.0"?>
<package>
  <name>rodi_example</name>
  <version>0.0.0</version>
  <description>The rodi_example package</description>

  <maintainer email="garyservim@gmail.com">Gary Servin</maintainer>

  <license>TODO</license>

  <url type="website">http://github.com/rodibot</url>

  <author email="garyservin@gmail.com">Gary Servin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rosserial</run_depend>

</package>
